2002-10-10  Theodore A. Roth  <troth@verinet.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/acknowledge.dox: Add cross references.

2002-10-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/api/using-tools.dox: New file.
	* doc/examples/demo/demo.dox: Change title.
	* doc/api/faq.dox: describe register usage.
	* doc/register-usage.txt: file gone, it's in the
		FAQ now.
	* doc/api/Makefile.am: wire the new using-tools.dox
		into the make infrastructure.

2002-10-07  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/demo.fig: Introduce R2.
	* doc/examples/demo/demo.dox: Document R2.

2002-10-04  Theodore A. Roth  <troth@verinet.com>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* doc/api/faq.dox: Add io port passing entry.

2002-10-03  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* doc/examples/demo/demo.dox: Fix Ted's FIXME.

2002-10-01  Theodore A. Roth  <troth@verinet.com>

	* doc/TODO: Updated.
	* doc/api/Makefile.am: Add using-avrprog.dox.
	* doc/api/tools-install.dox: Add ref to using-avrprog.dox.
	* doc/api/using-avrprog.dox: New file.

2002-10-01  Marek Michalkiewicz  <marekm@amelek.gda.pl>

	* include/avr/iom163.h: Add SIG_COMPARATOR, fix SIG_2WIRE_SERIAL.
	* include/avr/iotn26.h: New file, from
	Stefan Swanepoel <sswanepoel@tellumat.com>.
	* doc/api/main_page.dox: Add attiny26 as supported.
	* NEWS: Add tiny26 to new device list.
	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	(AVR_CRT_TINY): Add crttn26.o.

2002-09-30  Theodore A. Roth  <troth@verinet.com>

	* doc/api/main_page.dox: Add atmega16 as supported.

2002-09-30  Theodore A. Roth  <troth@verinet.com>

	* libc/stdlib/malloc.c: Quell compiler warning.

2002-09-30  Theodore A. Roth  <troth@verinet.com>

	* include/avr/io1200.h: Generate compiler warning if not included
		from avr/io.h.
	* include/avr/io2313.h: Ditto.
	* include/avr/io2323.h: Ditto.
	* include/avr/io2333.h: Ditto.
	* include/avr/io2343.h: Ditto.
	* include/avr/io4414.h: Ditto.