@@ -41,22 +41,141 @@
 extern "C" {
 #endif
 
+/** \defgroup ctype Character Operations
+    These functions perform various operations on characters.
+
+    \code #include <ctype.h>\endcode 
+
+	\note If any one of these functions is used, they all get pulled in to
+	your object file (they're in the same source file). The comments in the
+	source indicate that 182 bytes will get consumed. */
+
+/** \name Character classification routines
+
+    These functions perform character classification. They return true or
+    false status depending whether the character passed to the function falls
+    into the function's classification (i.e. isdigit() returns true if its
+    argument is any value '0' though '9', inclusive.) */
+
+ /* @{ */
+
+/** \ingroup ctype
+
+    Checks for an alphanumeric character. It is equivalent to <tt>(isalpha(c)
+    || isdigit(c))</tt>. */
+
 extern int isalnum(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for an alphabetic character. It is equivalent to <tt>(isupper(c) ||
+    islower(c))</tt>. */
+
 extern int isalpha(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks whether \c c is a 7-bit unsigned char value that fits into the
+    ASCII character set. */
+
 extern int isascii(int __c) __ATTR_CONST__;
-extern int iscntrl(int __c) __ATTR_CONST__;
-extern int isdigit(int __c) __ATTR_CONST__;
-extern int isgraph(int __c) __ATTR_CONST__;
-extern int islower(int __c) __ATTR_CONST__;
-extern int isprint(int __c) __ATTR_CONST__;
-extern int ispunct(int __c) __ATTR_CONST__;
-extern int isspace(int __c) __ATTR_CONST__;
-extern int isupper(int __c) __ATTR_CONST__;
-extern int isxdigit(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for a blank character, that is, a space or a tab. */
+
 extern int isblank(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for a control character. */
+
+extern int iscntrl(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for a digit (0 through 9). */
+
+extern int isdigit(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for any printable character except space. */
+
+extern int isgraph(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for a lower-case character. */
+
+extern int islower(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for any printable character including space. */
+
+extern int isprint(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for any printable character which is not a space or an alphanumeric
+    character. */
+
+extern int ispunct(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for white-space characters.  For the avr-libc library, these are:
+    space, form-feed ('\\f'), newline ('\\n'), carriage return ('\\r'),
+    horizontal tab ('\\t'), and vertical tab ('\\v'). */
+
+extern int isspace(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for an uppercase letter. */
+
+extern int isupper(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Checks for a hexadecimal digits, i.e. one of 0 1 2 3 4 5 6 7 8 9 a b c d e
+    f A B C D E F. */
+
+extern int isxdigit(int __c) __ATTR_CONST__;
+
+/* @} */
+
+/** \name Character convertion routines 
+
+    If \c c is not an unsigned char value, or \c EOF, the behaviour of these
+    functions is undefined. */
+
+/* @{ */
+
+/** \ingroup ctype
+
+    Converts \c c to a 7-bit unsigned char value that fits into the ASCII
+    character set, by clearing the high-order bits.
+
+    \warning Many people will be unhappy if you use this function. This
+    function will convert accented letters into random characters. */
+
 extern int toascii(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Converts the letter \c c to lower case, if possible. */
+
 extern int tolower(int __c) __ATTR_CONST__;
+
+/** \ingroup ctype
+
+    Converts the letter \c c to upper case, if possible. */
+
 extern int toupper(int __c) __ATTR_CONST__;
+
+/* @} */
 
 #ifdef __cplusplus
 }
